--- a/OpenGL_test/OpenGL_test.vcxproj
+++ b/OpenGL_test/OpenGL_test.vcxproj
@@ -142,10 +142,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="OpenGL_set_pixel.cpp" />
     <ClCompile Include="OpenGL_test.cpp" />
+    <ClCompile Include="point_operators.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glut.h" />
+    <ClInclude Include="OpenGL_drawing.hpp" />
+    <ClInclude Include="point.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
