--- a/OpenGL_test.vcxproj.filters
+++ b/OpenGL_test.vcxproj.filters
@@ -13,10 +13,135 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\environment">
+      <UniqueIdentifier>{0045e2f7-ef3c-4025-b4ef-7be5d61d2488}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\environment">
+      <UniqueIdentifier>{113d5b24-a1fc-4042-b5cd-fbc6dd838ab7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\environment\color">
+      <UniqueIdentifier>{95f90a40-abc4-40e2-8f06-2a13cb6708f9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\drawables">
+      <UniqueIdentifier>{9f085ad0-5fe8-4657-a04d-ede609e7889d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\drawables\shapes">
+      <UniqueIdentifier>{fc85e163-0ed5-4cf3-bbde-6370fdb0633e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\drawables\shapes\rectangle">
+      <UniqueIdentifier>{57efa830-1d9e-4e77-9d28-d30407615db1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\shapes">
+      <UniqueIdentifier>{a93b813d-7d25-4a43-8f7a-7cbebfd4bf24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\drawables">
+      <UniqueIdentifier>{f708703d-a6ef-4694-82be-ab68e3e55345}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\drawables\shapes">
+      <UniqueIdentifier>{25a3a655-d4f7-4bbb-944d-94b9ebb7ab3c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\drawables\shapes\ellipse">
+      <UniqueIdentifier>{4e008ab7-ab66-49c1-8d3f-f6ee8e28b4b6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\main_program">
+      <UniqueIdentifier>{ab63dda4-dc52-440e-b3c9-82fca28429d2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\shapes">
+      <UniqueIdentifier>{eca6bf1a-d505-4194-a10b-db0e303c6cfd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\shapes\shape">
+      <UniqueIdentifier>{f3da31ef-2b0b-4b37-b506-e17eab65f4ec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\main_program">
+      <UniqueIdentifier>{9bb03b2e-2772-4209-a8e4-521ce30d8460}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OpenGL_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="color_set_to_env.cpp">
+      <Filter>Source Files\environment\color</Filter>
+    </ClCompile>
+    <ClCompile Include="rectangle_draw.cpp">
+      <Filter>Source Files\drawables\shapes\rectangle</Filter>
+    </ClCompile>
+    <ClCompile Include="rectangle_constructors.cpp">
+      <Filter>Source Files\drawables\shapes\rectangle</Filter>
+    </ClCompile>
+    <ClCompile Include="ellipse_draw.cpp">
+      <Filter>Source Files\drawables\shapes\ellipse</Filter>
+    </ClCompile>
+    <ClCompile Include="ellipse_constructors.cpp">
+      <Filter>Source Files\drawables\shapes\ellipse</Filter>
+    </ClCompile>
+    <ClCompile Include="shape_getters.cpp">
+      <Filter>Source Files\shapes\shape</Filter>
+    </ClCompile>
+    <ClCompile Include="shape_setters.cpp">
+      <Filter>Source Files\shapes\shape</Filter>
+    </ClCompile>
+    <ClCompile Include="init_drawables.cpp">
+      <Filter>Source Files\main_program</Filter>
+    </ClCompile>
+    <ClCompile Include="init_env.cpp">
+      <Filter>Source Files\main_program</Filter>
+    </ClCompile>
+    <ClCompile Include="drawables.cpp">
+      <Filter>Source Files\environment</Filter>
+    </ClCompile>
+    <ClCompile Include="display.cpp">
+      <Filter>Source Files\main_program</Filter>
+    </ClCompile>
+    <ClCompile Include="the_square.cpp">
+      <Filter>Source Files\environment</Filter>
+    </ClCompile>
+    <ClCompile Include="tick.cpp">
+      <Filter>Source Files\main_program</Filter>
+    </ClCompile>
+    <ClCompile Include="init_glut_window.cpp">
+      <Filter>Source Files\main_program</Filter>
+    </ClCompile>
+    <ClCompile Include="init_glut_functions.cpp">
+      <Filter>Source Files\main_program</Filter>
+    </ClCompile>
+    <ClCompile Include="init_glut.cpp">
+      <Filter>Source Files\main_program</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="drawable.hpp">
+      <Filter>Header Files\drawables</Filter>
+    </ClInclude>
+    <ClInclude Include="shape.hpp">
+      <Filter>Header Files\shapes</Filter>
+    </ClInclude>
+    <ClInclude Include="point.hpp">
+      <Filter>Header Files\environment</Filter>
+    </ClInclude>
+    <ClInclude Include="color.hpp">
+      <Filter>Header Files\environment</Filter>
+    </ClInclude>
+    <ClInclude Include="rectangle.hpp">
+      <Filter>Header Files\drawables\shapes</Filter>
+    </ClInclude>
+    <ClInclude Include="square.hpp">
+      <Filter>Header Files\drawables\shapes</Filter>
+    </ClInclude>
+    <ClInclude Include="ellipse.hpp">
+      <Filter>Header Files\drawables\shapes</Filter>
+    </ClInclude>
+    <ClInclude Include="circle.hpp">
+      <Filter>Header Files\drawables\shapes</Filter>
+    </ClInclude>
+    <ClInclude Include="main_program_functions.hpp">
+      <Filter>Header Files\main_program</Filter>
+    </ClInclude>
+    <ClInclude Include="drawables.hpp">
+      <Filter>Header Files\environment</Filter>
+    </ClInclude>
+    <ClInclude Include="the_square.hpp">
+      <Filter>Header Files\environment</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
